force-app/main/default/objects/KimbleOne__UsageTrackingModel__c/KimbleOne__UsageTrackingModel__c.object-meta.xml
<CustomObject>
    <label>Usage Tracking Model</label>
    <nameField>
        <label>Usage Tracking Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Tracking Models</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>