force-app/main/default/objects/KimbleOne__UsageTrackingModel__c/fields/KimbleOne__ActualisedForecastApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualisedForecastApprovalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualised Forecast Approval Required</label>
    <type>Checkbox</type>
</CustomField>