force-app/main/default/objects/KimbleOne__UsageTrackingModel__c/fields/KimbleOne__ActualisedForecastApprovalTolerancePct__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualisedForecastApprovalTolerancePct__c</fullName>
    <label>Actualised Fcast Approval Tolerance Pct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>