force-app/main/default/objects/KimbleOne__UsageTrackingModel__c/fields/KimbleOne__ActualiseForecastOnPeriodChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualiseForecastOnPeriodChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualise Forecast On Period Change</label>
    <type>Checkbox</type>
</CustomField>