force-app/main/default/objects/KimbleOne__UsageTrackingModel__c/fields/KimbleOne__AllowFutureActuals__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowFutureActuals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Future Actuals</label>
    <type>Checkbox</type>
</CustomField>