force-app/main/default/objects/KimbleOne__UsageTrackingModel__c/fields/KimbleOne__ExcludeFromActualChecks__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExcludeFromActualChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Actual Checks</label>
    <type>Checkbox</type>
</CustomField>