force-app/main/default/objects/KimbleOne__UsageTrackingModel__c/fields/KimbleOne__IsActualUntracked__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsActualUntracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Actual Untracked</label>
    <type>Checkbox</type>
</CustomField>